fix gap per icon

--- a/css/globals.css
+++ b/css/globals.css
@@ -76,7 +76,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    gap: 16px;
+    gap: 32px;
     align-items: flex-start;
     height: 32px;
 }
